[BrowserSwitcher] Expand env-vars in command-line

Environment variables on the command-line (alternative browser path and
parameters) are expanded before being passed to the external program.

On Windows, this means strings like '%HOME%' are expanded.

On Linux, this means strings like '$VAR' and '${VAR}' are expanded. Also, a '~'
at the beginning of a command-line argument is expanded to the HOME environment
variable.

Bug: 882520
Change-Id: I9822b465999b3515d37e882f18a19df39b3e64d6
Reviewed-on: https://chromium-review.googlesource.com/1225854
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Commit-Queue: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592036}
Former-commit-id: 4b840a9c1e16e0fe278b9517af4e6b5f8365d176